dnl Process this file with autoconf to produce a configure script.
AC_INIT(elisp/vls.el)
AC_CONFIG_AUX_DIR(aux)
AM_INIT_AUTOMAKE(vls, 1.2)
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AM_PATH_LISPDIR
AC_OUTPUT(Makefile \
         elisp/Makefile \
         types/Makefile \
         types/elisp/Makefile \
         doc/Makefile)
